--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -76,19 +76,6 @@
         %td
           %span.convertTime.preciseTime
             = l @organization.updated_at, format: :convert_time
-      %tr
-        %td
-          Search Location
-        %td
-          %span
-            = @organization.default_location&.address
-      %tr
-        %td
-          Search Radius (mi)
-        %td
-          %span
-            = @organization.search_radius
-
   .col-md-6
     %table.table-list
       %tr
@@ -135,96 +122,44 @@
           - if @organization.website.present?
             = link_to @organization.website, class: "strong" do
               &#128279;
+
       %tr
         %td
-          Paid
+          POS integration:
         %td
-          -if @organization.is_paid
-            %strong
-              True
-          -else
-            - if LandingPages::ORGANIZATIONS.include?(@organization.slug)
-              %p.text-danger
-                IS NOT MARKED PAID BUT HAS A LANDING PAGE
-            -else
-              False
-          %em.less-strong
-            Set this via #{link_to "invoices", admin_organization_invoices_path(organization_id: @organization.to_param)}
-      %tr
-        %td
-          Parent
-        %td
-          - if @organization.parent_organization.present?
-            = link_to @organization.parent_organization.name, admin_organization_path(@organization.parent_organization)
-            %small.less-strong
-              If parent's paid, so's this
-          - else
-            &nbsp;
-      - if @organization.child_organizations.present?
-        %tr
-          %td
-            Children
-          %td
-            %ul{ style: "font-size: 80%;" }
-              - @organization.child_organizations.each do |org|
-                %li
-                  = link_to org.name, admin_organization_url(org)
-      %tr
-        - if @organization.regional?
-          %td
-            Regional Sub-Organizations
-          %td
-            %ul{ style: "font-size: 80%;" }
-              - @organization.nearby_organizations.each do |suborg|
-                %li
-                  = link_to suborg.name, admin_organization_path(suborg)
-        - elsif @organization.regional_parents.any?
-          %td
-            Regional Parent
-          %td
-            %ul{ style: "font-size: 80%;" }
-              - @organization.regional_parents.each do |regiona_parent|
-                %li
-                  = link_to regiona_parent.name, admin_organization_path(regiona_parent)
+          - if @organization.no_pos?
+            %em.small.less-strong no integration
+          - elsif @organization.ascend_pos?
+            = link_to "Ascend POS", organization_bulk_imports_path(organization_id: @organization.to_param)
+            %small
+              Ascend name:
+              %em
+                = @organization.ascend_name
+          - elsif @organization.broken_pos?
+            %span.text-danger
+              POS Integration broken!
+            = @organization.pos_kind.humanize
 
-  - if @organization.bike_shop? || @organization.any_pos?
-    .col-md-6
-      %table.table-list
-        %tr
-          %td
-            POS integration:
-          %td
-            - if @organization.ascend_pos?
-              = link_to "Ascend POS", organization_bulk_imports_path(organization_id: @organization.to_param)
-              %small
-                Ascend name:
-                %em
-                  = @organization.ascend_name
-            - elsif @organization.broken_pos?
-              %span.text-danger
-                POS Integration broken!
-              = @organization.pos_kind.humanize
+          -# Show link if it's lightspeed - or if it used to be lightspeed
+          - if @organization.lightspeed_pos? || @organization.broken_pos? && @organization.bikes.lightspeed_pos.any?
+            = link_to "Lightspeed POS", "https://posintegration.bikeindex.org/admin/organizations/#{@organization.id}"
 
-            -# Show link if it's lightspeed - or if it used to be lightspeed
-            - if @organization.lightspeed_pos? || @organization.broken_pos? && @organization.bikes.lightspeed_pos.any?
-              = link_to "Lightspeed POS", "https://posintegration.bikeindex.org/admin/organizations/#{@organization.id}"
-
-            - if current_user.developer? && @organization.manual_pos_kind.present?
-              %br
-              %small.only-dev-visible
-                %em.less-strong manual POS kind set:
-                = @organization.manual_pos_kind
+          - if current_user.developer? && @organization.manual_pos_kind.present?
+            %br
+            %small.only-dev-visible
+              %em.less-strong manual POS kind set:
+              = @organization.manual_pos_kind
 .row.mt-4
   .col-md-6
     %p
       %strong
         = link_to "Edit/Create Invoices", admin_organization_invoices_path(organization_id: @organization.to_param)
-        %em.less-strong
-          #{@organization.name} has #{pluralize(@organization.invoices.count, "total invoice")}
-        - if @organization.invoices.count > 0
-          and
-          %strong
-            #{@organization.invoices.active.count} active
+      %em.less-strong
+        #{@organization.name} has #{pluralize(@organization.invoices.count, "total invoice")}
+      - if @organization.invoices.count > 0
+        and
+        %strong
+          #{@organization.invoices.active.count} active
     - if @organization.parent_organization.present?
       %p
         Parent
@@ -236,11 +171,26 @@
         %small.less-strong
           which may add features to this organization
     = render partial: "/admin/organizations/invoices/table", locals: { invoices: @organization.invoices.order(id: :desc).limit(3) }
-
   .col-md-6
-    - if @organization.is_paid
-      %table.table-list
-        %tbody
+    %table.table-list
+      %tbody
+        %tr
+          %td
+            Paid
+          %td
+            -if @organization.is_paid
+              %strong
+                True
+            -else
+              - if LandingPages::ORGANIZATIONS.include?(@organization.slug)
+                %p.text-danger
+                  IS NOT MARKED PAID BUT HAS A LANDING PAGE
+              -else
+                False
+            %em.less-strong
+              Set this via #{link_to "invoices", admin_organization_invoices_path(organization_id: @organization.to_param)}
+
+        - if @organization.is_paid
           %tr
             %td Bike Search
             %td
@@ -310,6 +260,69 @@
             %td Enabled features
             %td.small
               = safe_join(@organization.enabled_feature_slugs.map { |slug| content_tag(:code, slug) }, ", ")
+
+        -# Associated organizations info
+        - if @organization.parent_organization.present?
+          - associated_orgs = true
+          %tr
+            %td Child of
+            %td
+              = link_to @organization.parent_organization.name, admin_organization_path(@organization.parent_organization)
+              %small.less-strong.d-block
+                Parent organization should be part of the same organization. Use "regional" feature otherwise
+        - if @organization.parent?
+          - associated_orgs = true
+          %tr
+            %td Child organizations
+            %td
+              %ul{ style: "font-size: 80%; margin-bottom: 0.5rem;" }
+                - @organization.child_organizations.each do |org|
+                  %li
+                    = link_to org.name, admin_organization_url(org)
+              %small.less-strong.d-block
+                Parent organization should be part of the same organization. Use "regional" feature otherwise
+        - if @organization.regional?
+          - associated_orgs = true
+          %tr
+            %td Regional Sub-Organizations
+            %td
+              %ul{ style: "font-size: 80%; margin-bottom: 0.5rem;" }
+                - @organization.nearby_organizations.each do |suborg|
+                  %li
+                    = link_to suborg.name, admin_organization_path(suborg)
+          %tr
+            %td Regional address
+            %td
+              = @organization.default_location&.address
+          %tr
+            %td Search radius (mi)
+            %td
+              = @organization.search_radius
+              %small.less-strong
+                This controls which organizations are regional sub organizations
+        - if @organization.regional_parents.any?
+          - associated_orgs = true
+          %tr
+            %td Regional overview organization
+            %td
+              - if @organization.regional_parents.count == 1
+                - regional_parent = @organization.regional_parents.first
+                = link_to regional_parent.name, admin_organization_path(regional_parent)
+              - else
+                %ul{ style: "font-size: 80%; margin-bottom: 0.5rem;" }
+                  - @organization.regional_parents.each do |regional_parent|
+                    %li
+                      = link_to regional_parent.name, admin_organization_path(regional_parent)
+              %small.less-strong.d-block Search radius includes this organization
+        - unless associated_orgs
+          %tr
+            %td
+              Associated orgs
+            %td
+              %em.small.less-strong
+                No associated organizations
+
+
 .row.mt-4
   .col-sm-6
     %h2
