--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -70,6 +70,9 @@
           - else
             %span.disabled-menu-item.menu-item
               = t(".registration_stickers")
+          - if current_organization.enabled?("hot_sheet")
+            %li
+              = active_link t(".hot_sheet"), organization_hot_sheet_path(organization_id: current_organization.to_param), class: "menu-item"
         - if current_organization.enabled?("csv_exports")
           %li
             = active_link t(".exports"), organization_exports_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
@@ -86,6 +89,9 @@
           - if current_organization.enabled?("customize_emails")
             %li
               = active_link t(".customize_emails"), organization_emails_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+          - if current_organization.enabled?("hot_sheet")
+            %li
+              = active_link t(".hot_sheet_configuration"), edit_organization_hot_sheet_path(organization_id: current_organization.to_param), class: "menu-item"
 
 .organized-wrap
   %div{ class: organized_container }
