--- a/app/views/organized/hot_sheets/edit.html.haml
+++ b/app/views/organized/hot_sheets/edit.html.haml
@@ -2,3 +2,36 @@
 .organized-page-header
   %h1
     Hot Sheet Configuration
+
+.row
+  .col-md-6
+    %table.table-list
+      %tbody
+        %tr
+          %td Enabled?
+          %td
+            - if @hot_sheet_configuration.enabled?
+              = check_mark
+            - else
+              %small.less-strong false
+        - if @hot_sheet_configuration.enabled?
+          %tr
+            %td
+              Generated at
+            %td
+              %span.convertTime.preciseTime
+                = l(@hot_sheet_configuration.send_at_today, format: :convert_time)
+
+- unless current_organization.search_coordinates.reject(&:blank?).count == 2
+  .alert.alert-warning
+    %h3.uncap
+      Organization does not have a base location
+    %p
+      = link_to "Add a location", locations_organization_manage_path(organization_id: current_organization.to_param)
+      to be able to enable Hot Sheet
+= form_for @hot_sheet_configuration, url: organization_hot_sheet_path(organization_id: current_organization), action: "update", method: :patch do |f|
+  .form-group
+    = f.check_box :is_enabled
+    = f.label :is_enabled, "Enabled", class: "org-form-label"
+  .mt-2
+    = submit_tag "Save", class: "btn btn-success btn-md-lg"
