--- a/app/views/organized/hot_sheets/edit.html.haml
+++ b/app/views/organized/hot_sheets/edit.html.haml
@@ -17,7 +17,7 @@
         - if @hot_sheet_configuration.enabled?
           %tr
             %td
-              Generated at
+              Generates at
             %td
               %span.convertTime.preciseTime
                 = l(@hot_sheet_configuration.send_at_today, format: :convert_time)
@@ -29,9 +29,25 @@
     %p
       = link_to "Add a location", locations_organization_manage_path(organization_id: current_organization.to_param)
       to be able to enable Hot Sheet
-= form_for @hot_sheet_configuration, url: organization_hot_sheet_path(organization_id: current_organization), action: "update", method: :patch do |f|
-  .form-group
-    = f.check_box :is_enabled
-    = f.label :is_enabled, "Enabled", class: "org-form-label"
-  .mt-2
-    = submit_tag "Save", class: "btn btn-success btn-md-lg"
+.row
+  .col-md-6
+    = form_for @hot_sheet_configuration, url: organization_hot_sheet_path(organization_id: current_organization), action: "update", method: :patch do |f|
+      .form-group
+        = f.label :send_hour do
+          Hour to create Hot Sheet every day
+          %small
+            24 hour clock
+        = f.number_field :send_hour, class: "form-control"
+      .form-group
+        = f.label :timezone_st, "Timezone"
+        -# We need to do a special timezone select so we can select it with moment
+        - timezones_select = ActiveSupport::TimeZone.all.sort.map { |z| [z.to_s, z.tzinfo.name] }
+        -# If we add hiddenFieldTimezone it will automatically assign to the timezone, so don't add that classname and clober the existing zone if configuration already exists
+        - auto_class_name = @hot_sheet_configuration.id.present? ? "" : "hiddenFieldTimezone"
+        = f.select :timezone_str, timezones_select, { prompt: "Choose timezone" }, class: "form-control #{auto_class_name}"
+
+      .form-group
+        = f.check_box :is_enabled
+        = f.label :is_enabled, "Enabled", class: "org-form-label"
+      .mt-2
+        = submit_tag "Save", class: "btn btn-success btn-md-lg"
