--- a/app/views/admin/organizations/custom_layouts/index.html.haml
+++ b/app/views/admin/organizations/custom_layouts/index.html.haml
@@ -27,11 +27,11 @@
         %td
           = link_to 'Landing page', edit_admin_organization_custom_layout_path(organization_id: @organization.to_param, id: 'landing_page')
           %small.less-strong
-            page  #{ link_to 'previewable here', organization_landing_path(organization_id: @organization.to_param) }, even if "off"
+            page  #{link_to 'previewable here', organization_landing_path(organization_id: @organization.to_param)}, even if "off"
         %td.table-cell-check
           = check_mark if @organization.landing_html.present?
         %td.table-cell-check
-          = link_to LandingPages::ORGANIZATIONS.include?(@organization.slug).to_s, "https://github.com/bikeindex/bike_index/blob/master/config/landing_pages.rb"
+          = check_mark if LandingPages::ORGANIZATIONS.include?(@organization.slug)
       - MailSnippet.organization_snippets.each do |snippet_name, snippet_description|
         - snippet = @organization.mail_snippets.where(name: snippet_name).first
         %tr
